# claui.app

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  style.css  vite.config.ts
.githooks/: pre-commit
.github/workflows/: pages.yml  release.yml
docs/: AUDIT_RULES.md  DECISIONS.md
site/: CNAME  LICENSE  README.md  robots.txt  sitemap.xml  style.css
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  capabilities.rs  claude.rs  ipc.rs  lib.rs  main.rs  menu.rs  notify.rs  pty.rs  sessions.rs  shell_env.rs  state.rs  statusline.rs  theme.rs  util.rs  window_state.rs
src/activity/: activityStore.test.ts  activityStore.ts  useActivityByProject.ts  useWorkingProjects.ts
src/capabilities/: CapabilitiesSection.tsx  capabilities.css  types.ts  useCapabilities.ts
src/ipc/: commands.ts
src/layout/: Icons.tsx  Layout.css  Layout.tsx  ProjectArea.css  ProjectArea.tsx  ProjectChrome.tsx  TabPane.tsx  TitleBar.css  TitleBar.tsx  hintLabels.test.ts  hintLabels.ts  useChromeSlots.ts  useHeldModifier.ts  useLayoutKeyboard.ts  useProjectCloseCleanup.ts
src/notify/: notifyStore.test.ts  notifyStore.ts  osNotification.ts  useListen.ts  useNotifyByProject.ts  useTabNotify.ts  useWindowFocus.ts
src/project/: ProjectPicker.css  ProjectPicker.tsx  pickProjectFolder.ts
src/projects/: ProjectsSection.css  ProjectsSection.tsx  basename.test.ts  basename.ts  projectSwitchKey.test.ts  projectSwitchKey.ts  projectsReducer.test.ts  projectsReducer.ts  reorderGeometry.test.ts  reorderGeometry.ts  types.ts  useProjectReorder.ts  useProjectSwitchKeyboard.ts  useProjects.test.ts  useProjects.ts
src/scroll/: createOverlayScrollbar.ts  overlayScrollbar.css  overlayScrollbarGeometry.test.ts  overlayScrollbarGeometry.ts  scrollSources.ts  useOverlayScrollbar.ts
src/sessions/: ListRow.css  ListRow.tsx  SessionsSection.tsx  Sidebar.css  Sidebar.tsx  relativeTime.test.ts  relativeTime.ts  sidebarWidth.test.ts  sidebarWidth.ts  useSessionsPolling.ts  useSidebar.ts  useSidebarResize.ts
src/status/: StatusBar.css  StatusBar.tsx  rateLimits.test.ts  rateLimits.ts  statusFormat.test.ts  statusFormat.ts  useGlobalRateLimits.ts  useStatusByProject.test.ts  useStatusByProject.ts
src/tabs/: HoverToolbar.css  HoverToolbar.tsx  ProjectTabBar.css  ProjectTabBar.tsx  WorkspaceTabBar.css  (+12 more)
(+15 files in other folders)
